Fix navbar not covering jumbotron bug

--- a/src/styles/pages/home.css
+++ b/src/styles/pages/home.css
@@ -1,3 +1,3 @@
 .home {
-  margin-top: 0px;
+  margin-top: -2px;
 }
